--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,12 @@
 * { margin: 0px; padding: 0px; }
 
 html { width: 100%; height: 100%; }
-html body { width: 100%; height: 300px; overflow: hidden; position: relative; }
-html #box { width: 400%; height: 300px; position: absolute; }
-html #box img { float: left; width: 25%; height: 300px; }
+html body { width: 100%; height: 300px; overflow: hidden; }
+html #box { width: 400%; height: 300px; }
+html #box div { float: left; width: 25%; height: 300px; }
+html #box div:nth-child(1) { background: aqua; }
+html #box div:nth-child(2) { background: goldenrod; }
+html #box div:nth-child(3) { background: firebrick; }
+html #box div:nth-child(4) { background: cadetblue; }
 
 /*# sourceMappingURL=index.css.map */
