--- a/css/index.scss
+++ b/css/index.scss
@@ -9,16 +9,28 @@ html{
         width: 100%;
         height: 300px;
         overflow: hidden;
-        position: relative;
+//      position: relative;
     }
     #box{
         width: 400%;
         height: 300px;
-        position: absolute;
-        img{
+//      position: absolute;
+        div{
             float: left;
             width: 25%;
             height: 300px;
+            &:nth-child(1){
+                background: aqua;
+            }
+            &:nth-child(2){
+                background: goldenrod;
+            }
+            &:nth-child(3){
+                background: firebrick;
+            }
+            &:nth-child(4){
+                background: cadetblue;
+            }
         }
     }
 }
