--- a/css/index.css
+++ b/css/index.css
@@ -3,10 +3,6 @@
 html { width: 100%; height: 100%; }
 html body { width: 100%; height: 300px; overflow: hidden; }
 html #box { width: 400%; height: 300px; }
-html #box div { float: left; width: 25%; height: 300px; }
-html #box div:nth-child(1) { background: aqua; }
-html #box div:nth-child(2) { background: goldenrod; }
-html #box div:nth-child(3) { background: firebrick; }
-html #box div:nth-child(4) { background: cadetblue; }
+html #box img { float: left; width: 25%; height: 300px; }
 
 /*# sourceMappingURL=index.css.map */
